--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "author": "Denis Akiyakov <newsiberian2015@yandex.ru>",
   "license": "MIT",
   "dependencies": {
-    "apollo-link": "^1.0.7"
+    "apollo-link": "^1.0.7",
+    "graphql": "^0.12.0"
   },
   "peerDependencies": {
     "graphql": "^0.11.0 || ^0.12.0"
   },
   "devDependencies": {
-    "@types/graphql": "0.11.7",
     "@types/jest": "21.1.10",
     "@types/zen-observable": "^0.5.3",
     "browserify": "15.0.0",
